	- Fix an NRE related to jammers enabling.
- AI:
	- Make the autotuning re-centering distance customisable.
	- Add unclamped max values for auto-tuning speed and altitude.
	- Prevent weapon selection from choosing weapons when target is closer than the weapon's minSafeDistance.
- Vessel Spawning:
	- Disable gravity easing when using 'Warp Here' above 10m altitude.
- Weapons:
	- Fix various NREs related to missiles and multi-missile launchers.
	- Fix missiles fired from same source vessel causing each other to explode when they cross within proximity detonation distance.
	- Add flareEffectivity = 1 in missile configs. Modifies how the missile targeting is affected by flares, 1 is fully affected (normal behavior), lower values mean less affected (0 is ignores flares), higher values means more affected.
- Competition:
	- Make the saving of backup tournaments optional (hidden setting TOURNAMENT_BACKUPS in settings.cfg).
	- Added a ranked tournament mode.
		- Ranked tournaments begin with a single shuffled round (craft assigned to heats randomly), then continues to generate ranked rounds (craft assigned to heats based on their current rank) until the number of ranked rounds run matches or exceeds the rounds slider (which can be adjusted during a tournament).
		- Ranked tournaments only work for FFA style tournaments. nCr and gauntlet style tournaments aren't supported.
		- For teams tournaments, the combined score for the teams is used for the ranking.
		- Enable the score window via the "Sc" button on the Vessel Switcher window.
		- Use the "UI" button to keep the window visible even when the rest of the UI is disabled (F2).
		- Use the "±" buttons to adjust the font size.
		- Use the "W" button to adjust the score weights.
		- Left click and drag the drag handle to resize the window.
		- Right click the drag handle to switch to auto-adjusting height.
		- Scores update after each round (not heat) in a ranked tournament.