@@ -343,6 +343,8 @@ Localization
         #LOC_BDArmory_VesselMover_Help_ResetAltitude = Reset Altitude
         #LOC_BDArmory_VesselMover_Help_AdjustAltitude = Adjust Altitude
         #LOC_BDArmory_VesselMover_CloseOnCompetitionStart = Close On Competition Start
+        #LOC_BDArmory_VesselMover_Craft = Craft
+        #LOC_BDArmory_VesselMover_Folder = Folder
 
         // Waypoints game mode
         #LOC_BDArmory_Settings_WaypointsMode = Waypoints Mode
