@@ -11,10 +11,6 @@
 - Wiki entries
 	- Auto-Tuning
 
-- Ranked tournament mode
-	- Add support for converting tournament.json to tournament.state
-- Vessel Spawner
-	- Add option to select craft from subfolders of the SPH/VAB.
 - Auto-tuning
 	- Automatically enable the pilot if it's not enabled and drop the plane from +1000m to get going if it isn't already.
 
