@@ -11,6 +11,8 @@
 	- Prevent weapon selection from choosing weapons when target is closer than the weapon's minSafeDistance.
 - Vessel Spawning:
 	- Disable gravity easing when using 'Warp Here' above 10m altitude.
+- Vessel Mover:
+	- Add support for browsing craft in subfolders of the SPH and VAB.
 - Weapons:
 	- Fix various NREs related to missiles and multi-missile launchers.
 	- Fix missiles fired from same source vessel causing each other to explode when they cross within proximity detonation distance.
